# submarine-driver-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo_setup.sh  package.xml
.github/workflows/: build.yml
config/: submarine_rviz.rviz  vehicle_params.yaml
include/submarine_drivers/actuators/: thruster_driver.hpp
include/submarine_drivers/core/: actuator_base.hpp  driver_base.hpp  noise_model.hpp  sensor_base.hpp  types.hpp
include/submarine_drivers/estimation/: state_estimator_6dof.hpp
include/submarine_drivers/sensors/: depth_sensor_driver.hpp  dvl_driver.hpp  imu_driver.hpp
launch/: demo.launch.py  drivers.launch.py
src/actuators/: thruster_driver.cpp
src/core/: noise_model.cpp
src/estimation/: state_estimator_6dof.cpp
src/nodes/: sensor_driver_node.cpp  state_estimator_node.cpp  trajectory_sim_node.cpp
src/sensors/: depth_sensor_driver.cpp  dvl_driver.cpp  imu_driver.cpp
test/: test_depth_sensor.cpp  test_dvl_driver.cpp  test_imu_driver.cpp  test_noise_model.cpp  test_state_estimator.cpp  test_thruster_driver.cpp
urdf/: submarine.urdf
